--- a/eq-lightning/research.html
+++ b/eq-lightning/research.html
@@ -23,8 +23,9 @@
     <div class="eq-research-section">
         <div class="eq-research-card">
             <h3>Three-Column Layout Best Practices</h3>
-            <p>Lightning record pages support three regions (left, center, right). Salesforce recommends the three-column layout for standard record pages, placing detail fields on the left, activity and path components in the center, and related lists on the right. This pattern reduces scrolling and provides context at a glance.</p>
+            <p>Lightning record pages support three regions (left, center, right). Salesforce provides the three-column template in App Builder but does not prescribe which content belongs in which column — that decision is left to each org. Common patterns include Details&nbsp;left / Activity&nbsp;center / Related&nbsp;right, as well as Related&nbsp;left / Details&nbsp;center / Activity&nbsp;right. The EQ Lightning prototype uses the latter, giving the record detail the widest (flex) column for readability while keeping related lists and activity in fixed-width rails.</p>
             <a href="https://help.salesforce.com/s/articleView?id=sf.lightning_app_builder_customize_lex_pages.htm&type=5" class="eq-research-link" target="_blank" rel="noopener">Salesforce Help: Customize Lightning Record Pages →</a>
+            <a href="https://www.matchmyemail.com/reconfiguring-salesforce-lightning-page-layouts-to-increase-user-acceptance-and-adoption-3-column-page-layout/" class="eq-research-link" target="_blank" rel="noopener">Match My Email: 3-Column Page Layout for Adoption →</a>
         </div>
 
         <div class="eq-research-card">
