Path component rewrite: field-based exit criteria, expand/collapse, new oppo modal

--- a/eq-lightning/account.html
+++ b/eq-lightning/account.html
@@ -178,7 +178,7 @@
                             </div>
                         </header>
                         <div class="slds-no-flex">
-                            <button class="slds-button slds-button_neutral" style="font-size:0.6875rem;">New</button>
+                            <button class="slds-button slds-button_neutral" style="font-size:0.6875rem;" onclick="EQ.newOpportunityModal({accountName:'The Knights Who Say Ni Ltd', accountId:'account.html'})">New</button>
                         </div>
                     </div>
                     <div class="slds-card__body">
